refactor(style.css, contact us): added design

--- a/pages/contact_us/assets/css/style.css
+++ b/pages/contact_us/assets/css/style.css
@@ -25,7 +25,7 @@
 
 
   #contact-us {
-    background-image: url("../img/Bus2.jpg"); /* Replace with your actual background image path */
+    background-image: url("../img/beach.jpg"); /* Replace with your actual background image path */
     background-size: cover;
     background-position: center;
     color: #fff;
